--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://www.jondanielcoombs.tech/",
+  "homepage": "coder-jon014.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
