--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://coder-jon014.github.io/MyPortfolio",
+  "homepage": "https://www.jondanielcoombs.tech/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
